--- a/ionic/www/templates/client/checkout.html
+++ b/ionic/www/templates/client/checkout.html
@@ -1,13 +1,17 @@
 <ion-view>
 	<ion-nav-title>CodeDelivery - Checkout</ion-nav-title>
 	<div class="bar bar-subheader">
+		<button class="button button-icon ion-plus" ng-click="openListProducts()"></button>
 		<h2 class="title">Total R$: {{total}}</h2>
-		<button class="button button-ion ion-minus-circled" ng-click="showDelete = !showDelete">
+		<button class="button button-icon ion-minus-circled" ng-click="showDelete = !showDelete">
 		</button>
 	</div>
 	<ion-content class="padding has-subheader">
+		<button class="button button-assertive button-full" ng-click="save();">
+			Salvar pedido
+		</button>
 		<ion-list show-delete="showDelete">
-			<ion-item ng-repeat="o in items">
+			<ion-item ng-repeat="o in items" ng-click="openProductDetail($index)">
 				<h2>{{o.name}}</h2>
 				<div class="row">
 					<div class="col">
