--- a/ionic/www/templates/client/checkout_detail.html
+++ b/ionic/www/templates/client/checkout_detail.html
@@ -1,6 +1,28 @@
 <ion-view>
-	
-	<ion-content>
-		Checkout details
+	<ion-nav-title>Produto: {{product.name}}</ion-nav-title>
+	<div class="bar bar-subheader">
+		<h2 class="title">Detalhes do produto</h2>
+	</div>
+	<ion-content class="padding has-subheader">
+		<div class="list card">
+			<div calss="item item-avatar">
+				<h2>{{product.name}}</h2>
+				<p>
+					Qtd: {{product.qtd}} <br/>
+					<i class="ion ion-cash">{{product.price}}</i>
+				</p>
+			</div>
+			<label class="item item-input">
+				<span class="input-label">Quantidade:</span>
+				<input type="text" placeholder="Forneça a quantidade" ng-model="product.qtd" />
+			</label>
+			<button class="button button-assertive button-full" ng-click="updateQtd()">
+				Alterar quantidade
+			</button>
+			<div class="item item-body">
+				<h2>Descrição</h2>
+				<p>{{product.description}}</p>
+			</div>
+		</div>
 	</ion-content>
 </ion-view>
