Iniciado criação do menu ad aplicação;
Iniciado criação da área "Meus pedidos" do cliente;

--- a/ionic/www/templates/login.html
+++ b/ionic/www/templates/login.html
@@ -1,5 +1,7 @@
 <ion-view>
-	<ion-nav-title>Code delivery - Login</ion-nav-title>
+	<ion-nav-bar class="bar bar-positive">
+		<ion-nav-title>Code delivery - Login</ion-nav-title>
+	</ion-nav-bar>
 	<ion-content class="padding">
 		<form name="form" ng-submit="login();">
 			<div class="list list-inset">
