Ajustando layout da tela "Meus pedidos"

--- a/ionic/www/templates/client/menu.html
+++ b/ionic/www/templates/client/menu.html
@@ -15,6 +15,10 @@
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
+				<ion-item class="item-icon-left" menu-close ui-sref="client.view_products">
+					<i class="icon ion-android-list"></i>
+					Produtos
+				</ion-item>
 				<ion-item class="item-icon-left" menu-close ui-sref="client.order">
 					<i class="icon ion-android-list"></i>
 					Meus pedidos
