Finalizado "Meus pedidos" na app da parte do cliente;
Adicionado filter para data;
Criado controller viewOrder e view para visualização dos pedidos feitos;
Ajustado redirecionamentos da app;

--- a/ionic/www/templates/client/menu.html
+++ b/ionic/www/templates/client/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-with-back-views="true">
+<ion-side-menus enable-menu-with-back-views="true">
 
 	<ion-side-menu-content>
 		<ion-nav-bar class="bar-positive">
