--- a/ionic/www/templates/client/order.html
+++ b/ionic/www/templates/client/order.html
@@ -1,13 +1,14 @@
 <ion-view>
 	<ion-nav-title>CodeDelivery - Meus pedidos</ion-nav-title>
 	<ion-content class="padding has-header">
+		<ion-refresher pulling-text="Puxe para atualizar..." on-refresh="doRefresh()"></ion-refresher>
 		<ion-list>
-			<ion-item ng-repeat="o in items">
+			<ion-item ng-repeat="o in items" ng-click="openOrderDetail(o)">
 				<div class="row">
 					<div class="col">
 						<h2>{{o.created_at.date|limitTo: 10|date: 'dd/mm/yyyy'}}</h2>
-						<p>{{o.product_names|limitTo: 2}}</p>
-						<i class="ion ion-ios-cart">{{o.product_names.length}}</i>
+						<p>{{o.product_names|limitTo: 2| join: ', '}}</p>
+						<i class="ion ion-ios-cart">{{o.product_names.length}} Itens</i>
 					</div>
 					<div class="col text-right">
 						<i class="ion ion-social-usd">{{o.total}}</i>
