--- a/ionic/www/templates/client/view_delivery.html
+++ b/ionic/www/templates/client/view_delivery.html
@@ -21,7 +21,7 @@
 				</div>
 			</ion-item>
 		</ion-list>
-		<ui-gmap-google-map center='map.center' zoom='map.zoom'>
+		<ui-gmap-google-map center='map.center' zoom='map.zoom' bounds="map.bounds">
 			<ui-gmap-marker idKey="o.id" coords="o.coords" options="o.options" ng-repeat="o in markers"></ui-gmap-marker>
 		</ui-gmap-google-map>
 	</ion-content>
