--- a/ionic/www/templates/client/view_delivery.html
+++ b/ionic/www/templates/client/view_delivery.html
@@ -22,7 +22,25 @@
 			</ion-item>
 		</ion-list>
 		<ui-gmap-google-map center='map.center' zoom='map.zoom' bounds="map.bounds">
-			<ui-gmap-marker idKey="o.id" coords="o.coords" options="o.options" ng-repeat="o in markers"></ui-gmap-marker>
+			<ui-gmap-map-control template="button-descentralize.html" position="top-right"
+			controller="CvdControlDescentralize" index="-1">
+			<ui-gmap-marker template="button-reload.html" position="top-right"
+			controller="CvdControlReload" index="-1">
+			</ui-gmap-map-control>
+			<ui-gmap-markers models="markers" coords="'coords'" options="'options'" fit="map.fit">
+			</ui-gmap-markers>
 		</ui-gmap-google-map>
 	</ion-content>
+
+	<script id="button-descentralize.hml" type="text/ng-template">
+		<button class="button button-stable">
+			<i class="ion ion-android-bicycle"></i>
+		</button>
+	</script>
+	<script id="button-reload.hml" type="text/ng-template">
+		<button class="button button-stable">
+			<i class="ion ion-refresh"></i>
+		</button>
+	</script>
+
 </ion-view>
