Adicionado funcionalidade de logout;
Adicionado funcionalidade para atualizar o status do pedido para
entregue na api do deliveryman;

--- a/ionic/www/templates/deliveryman/view_order.html
+++ b/ionic/www/templates/deliveryman/view_order.html
@@ -24,5 +24,8 @@
 		<button type="button" class="button button-positive button-full" ng-click="goToDelivery()">
 			<i class="ion ion-model-s"></i>
 		</button>
+		<button class="button button-assertive button-full" ng-click="deliverOrder(order)">
+			Concluir entrega
+		</button>
 	</ion-content>
 </ion-view>
